Issue #10: Align home text in responsive mode

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -42,7 +42,7 @@
             border-bottom: 1px solid $accent;
             display: inline-block;
             font-weight:500;
-            padding-bottom: .2em; 
+            padding-bottom: .2em;
             text-decoration: none;
             &:hover{
                 color:$accent;
@@ -62,9 +62,9 @@
     .ctn-networks{
         flex: 1 100%;
     }
-    .header, 
+    .header,
     .main{
-        flex: 2 100%; 
+        flex: 2 100%;
     }
     .ctn-networks{
         .hash{
@@ -81,7 +81,7 @@
         overflow: initial;
         position: static;
     }
-    
+
     .wrapper-content{
         left: 5%;
         width: 90%;
@@ -90,13 +90,17 @@
             font-size: 1em;
         }
     }
+
+    .main {
+      text-align: center;
+    }
 }
 
 @media(max-height: 768px){
     .content-home{
-        .header, 
+        .header,
         .main{
-            flex: 1 100%; 
+            flex: 1 100%;
         }
         .ctn-networks{
             flex: 2 100%;
